working shopping cart

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,8 +9,11 @@
   <% end %>
 
 
-<% if @products.present? %>
-  <%= render( partial: 'products/list',) %>
-<% else %>
-  <p>There are no products containing the term(s) <%= params[:search] %>.</p>
-<% end %>
+<div class="row">
+  <div class="col-xs-6 col-xs-offset-3">
+    <% @products.each do |product| %>
+        <%= render "product_row",  product: product, order_item: @order_item %>
+
+  <% end %>
+  </div>
+</div>
