--- a/app/views/products/_product_row.html.erb
+++ b/app/views/products/_product_row.html.erb
@@ -1,26 +1,35 @@
 
-
-  <div class="well">
-
-  <div class="row">
-    <div class="col-xs-8">
-      <h4><%= product.name %></small></h4>
-    </div>
-    <div class="col-xs-4">
-
-      
-
+  <table class="table table-bordered table-striped">
+    <thead>
+      <tr>
+        <th class="text-left"><%= sort_link "name" %></th>
+        <th class="text-left"><%= "price" %></th>
+        <th class="text-left"><strong>photo:</strong></th>
+        <th class="text-left"><strong>Quantity:</strong></th>
+        <th class="text-left"><strong>Add to cart:</strong></th>
+      </tr>
+    </thead>
+      <tbody>
+      <% @products.each do |product| %>
       <%= form_for order_item, remote: true do |f| %>
-      <h4 class="text-right">Unit Price: <span style="color: green"><%= number_to_currency product.price %></span></h4>
-        <div class="input-group">
-          <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
-          <div class="input-group-btn">
-            <%= f.hidden_field :product_id, value: product.id %>
-            <%= f.submit "Add to Cart", class: "btn btn-primary" %>
-          </div>
-        </div>
-      <% end %>
-    </div>
+      <tr>
+        <td><%= link_to product.name, product_path(product.id) %> </td>
+        <td> <%= product.price %>  </td>
 
-  </div>
-</div>
+          <% product.photos.each do |photo| %>
+          <td><%= image_tag photo.image %> </td>
+          <td><%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %></td>
+
+
+          
+
+
+                  <%= f.hidden_field :product_id, value: product.id %>
+                  <td><%= f.submit "Add to Cart", class: "btn btn-primary" %></td>
+      </tr>
+
+    <% end %>
+  <% end %>
+    <% end %>
+    </tbody>
+  </table>
