--- a/app/views/carts/_cart_row.html.erb
+++ b/app/views/carts/_cart_row.html.erb
@@ -1,28 +1,33 @@
-<div class="well">
 
-  <div class="row">
-    <div class="col-xs-8">
-      <h4><%= product.name %></h4>
-    </div>
-    <div class="col-xs-4">
+  <table class="table table-bordered table-striped">
+    <thead>
+        <tr>
+            <th class="text-left"><%= "name" %></th>
+            <th class="text-left"><%= "price" %></th>
+            <th class="text-left">
+                <strong>quantity:</strong>
+            </th>
+            <th class="text-left">
+                <strong>Update quantity:</strong>
+            </th>
+            <th class="text-left">
+                <strong>Delete:</strong>
+            </th>
 
+          </tr>
+      </thead>
+      <tbody>
       <%= form_for order_item, remote: true do |f| %>
-        <h4 class="text-right">Unit Price: <span style="color: green"><%= number_to_currency order_item.unit_price %></span></h4>
-        <div class="row">
-          <div class="col-xs-4">
-            <%= f.number_field :quantity, value: order_item.quantity.to_i, class: "form-control", min: 1 %>
-            <%= f.hidden_field :product_id, value: product.id %>
-          </div>
-          <div class="col-xs-8 text-right">
-            <div class="btn-group">
-              <%= f.submit "Update Quantity", class: "btn btn-primary" %>
-              <%= link_to "Delete", order_item, { data: { confirm: "Are you sure you wish to delete the product '#{order_item.product.name}' from your cart?" }, method: :delete, remote: true, class: "btn btn-danger" } %>
-            </div>
-          </div>
-        </div>
-        <h4 class="text-right">Total Price: <span style="color: green"><%= number_to_currency order_item.total_price %></span></h4>
-      <% end %>
-    </div>
-
-  </div>
-</div>
+        <tr>
+            <td><%= product.name %></td>
+            <td><%= product.price %></td>
+            <td><%= f.number_field :quantity, value: 1, min: 1 %></td>
+              <%= f.hidden_field :product_id, value: product.id %>
+            <td><%= f.submit "Update Quantity", class: "btn btn-primary" %></td>
+            <td><%= link_to "Delete", order_item,
+              { data: { confirm: "Are you sure you wish to delete the product '#{order_item.product.name}' from your cart?" },
+              method: :delete, remote: true, class: "btn btn-danger" } %> </td>
+        </tr>
+          <% end %>
+      </tbody>
+  </table>
