homepage and shoppingcart changes

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,3 +5,11 @@ img  {
 .table-bordered {
   width: 700px;
 }
+
+.searchbar {
+  text-align: center;
+}
+
+.homepageheader {
+  text-align: center;
+}
