--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,13 @@
-<h1>Overview of Products</h1>
+<h1 class="homepageheader">Overview of Products</h1>
 
 
-  <%= form_tag products_path, :method => 'get' do %>
+  <div class="searchbar"><%= form_tag products_path, :method => 'get' do %>
   <p>
     <%= text_field_tag :search, params[:search] %>
     <%= submit_tag "Search", :name => nil %>
   </p>
   <% end %>
+</div>
 
 
 <div class="row">
