--- a/app/views/carts/_cart_row.html.erb
+++ b/app/views/carts/_cart_row.html.erb
@@ -4,30 +4,24 @@
         <tr>
             <th class="text-left"><%= "name" %></th>
             <th class="text-left"><%= "price" %></th>
-            <th class="text-left">
-                <strong>quantity:</strong>
-            </th>
-            <th class="text-left">
-                <strong>Update quantity:</strong>
-            </th>
-            <th class="text-left">
-                <strong>Delete:</strong>
-            </th>
-
+            <th class="text-left"> <strong>quantity:</strong></th>
+            <th class="text-left"> <strong>Update quantity:</strong></th>
+            <th class="text-left"><strong>Delete:</strong></th>
           </tr>
       </thead>
       <tbody>
+      <% @order_items.each do |order_item| %>
       <%= form_for order_item, remote: true do |f| %>
         <tr>
-            <td><%= product.name %></td>
-            <td><%= product.price %></td>
+            <td><%= order_item.product.name %></td>
+            <td><%= order_item.product.price %></td>
             <td><%= f.number_field :quantity, value: 1, min: 1 %></td>
-              <%= f.hidden_field :product_id, value: product.id %>
             <td><%= f.submit "Update Quantity", class: "btn btn-primary" %></td>
             <td><%= link_to "Delete", order_item,
               { data: { confirm: "Are you sure you wish to delete the product '#{order_item.product.name}' from your cart?" },
               method: :delete, remote: true, class: "btn btn-danger" } %> </td>
         </tr>
+          <% end %>
           <% end %>
       </tbody>
   </table>
