--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -52,7 +52,7 @@
   </div>
 </div>
 <BR>
-<div>
+
 <%= form_tag charges_path do %>
   <article>
     <% if flash[:error].present? %>
@@ -61,12 +61,20 @@
       </div>
     <% end %>
   </article>
-</div>
 
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="Your order at Green Gems"
-          data-panel-label="<%="Total price: #{number_to_currency current_order.subtotal * 1.15}" %>"
-          data-locale="auto"></script>
+
+<form action="/your-server-side-code" method="POST">
+<script
+  src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+  data-key="pk_test_AWVRdlM1LHBiV2UOyLT0bFyA"
+  data-panel-label="<%="Total price: #{number_to_currency current_order.subtotal * 1.15}" %>"
+  data-name="Demo Site"
+  data-description="2 widgets"
+  data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+  data-locale="auto"
+  data-zip-code="true"
+  data-currency="eur">
+</script>
+</form>
 
 <% end %>
