--- a/app/views/order_items/update.js.erb
+++ b/app/views/order_items/update.js.erb
@@ -1,2 +1,2 @@
-$(".cart-text").html("<%= escape_javascript(render 'layouts/cart_text') %>")
-$(".shopping-cart").html("<%= escape_javascript(render 'carts/shopping_cart') %>")
+$(".cart-text").html("<%= escape_javascript(render 'layouts/cart_text') %>");
+$(".shopping-cart").html("<%= escape_javascript(render 'carts/shopping_cart') %>");
