--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -381,7 +381,7 @@
       <script
         src="https://checkout.stripe.com/checkout.js" class="stripe-button"
         data-key="pk_test_AWVRdlM1LHBiV2UOyLT0bFyA"
-        data-amount="<%= current_order.subtotal * 1.15 %>"
+        data-amount="<%= current_order.total * 100 %>"
         data-name="Australianproducts"
         data-description="2 widgets"
         data-image="http://res.cloudinary.com/sebastiaanpoppen/image/upload/v1479297450/flag-round-250_uodave.png"
