working order table

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,14 +3,14 @@
 
 <table class="table table-bordered table-striped">
   <thead>
-    <th class="text-left"><%= "id" %></th>
+    <th class="text-left"><%= "Created at" %></th>
     <th class="text-left"><%= "total amount" %></th>
   </thead>
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-          <td><%= order.id %>
-          <td><%= order.total %>
+          <td><%= order.created_at %> </td>
+          <td><%= "€ #{order.total}" %> </td>
       </tr>
       <% end %>
   </tbody>
