fixed order confirmation

--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,1 +1,4 @@
-<h2>Thanks, you paid <strong>$5.00</strong>!</h2>
+<h1>Thanks, you your order has been confirmed and paid</h1>
+
+<h3> A total amount of <%=current_order.total%> euro has been charged from your credit-card.
+We will send you a confirmation once your order has been shipped.</hr>
