--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -37,13 +37,19 @@
                 <td class="no-line"></td>
                 <td class="no-line"></td>
                 <td class="no-line text-left">Shipping</td>
-                <td class="no-line text-right"><%="#{number_to_currency current_order.subtotal * 0.15 }" %></td>
+                <td class="no-line text-right"><%="#{number_to_currency current_order.shipping }" %></td>
               </tr>
+                <tr>
+                  <td class="no-line"></td>
+                  <td class="no-line"></td>
+                  <td class="no-line text-left">Tax</td>
+                  <td class="no-line text-right"><%="#{number_to_currency current_order.tax }" %></td>
+                </tr>
               <tr>
                 <td class="no-line"></td>
                 <td class="no-line"></td>
                 <td class="no-line text-left"><strong>Total</strong></td>
-                <td class="no-line text-right"><%="#{number_to_currency current_order.subtotal * 1.15}" %></td>
+                <td class="no-line text-right"><%="#{number_to_currency current_order.total }" %></td>
               </tr>
               </tbody>
             </table>
@@ -361,5 +367,30 @@
 <BR>
 <BR>
 
-(??)<% end %>
+<div class="paybutton">
+  <%= form_tag charges_path do %>
+    <article>
+      <% if flash[:error].present? %>
+        <div id="error_explanation">
+          <p><%= flash[:error] %></p>
+        </div>
+      <% end %>
+    </article>
+
+    <form action="/your-server-side-code" method="POST">
+      <script
+        src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+        data-key="pk_test_AWVRdlM1LHBiV2UOyLT0bFyA"
+        data-amount="<%= current_order.total * 100 %>"
+        data-name="Australianproducts"
+        data-description="2 widgets"
+        data-image="http://res.cloudinary.com/sebastiaanpoppen/image/upload/v1479297450/flag-round-250_uodave.png"
+        data-locale="auto"
+        data-zip-code="true"
+        data-currency="eur">
+      </script>
+    </form>
+  </div>
+
+  <% end %>
 </div>
