create carts model

--- a/app/views/layouts/_cart_text.html.erb
+++ b/app/views/layouts/_cart_text.html.erb
@@ -1,1 +1,1 @@
-<div class="cartbutton"><%= link_to "#{current_order.order_items.size} Items in Cart ( #{number_to_currency current_order.subtotal} )", cart_path(:id) %></div>
+<div class="cartbutton"><%= link_to "#{current_cart.order_items.size} Items in Cart ( #{number_to_currency current_cart.subtotal} )", cart_path(:id) %></div>
