--- a/app/views/carts/_shopping_cart.html.erb
+++ b/app/views/carts/_shopping_cart.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <h4><%="Subtotal: #{number_to_currency current_order.subtotal}" %></h4>
+  <h4><%="Subtotal: #{number_to_currency current_cart.subtotal}" %></h4>
 </div>
 
 <div>
