--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -31,25 +31,25 @@
                 <td class="thick-line"></td>
                 <td class="thick-line"></td>
                 <td class="thick-line text-left">Subtotal</td>
-                <td class="thick-line text-right"><%="#{number_to_currency current_order.subtotal}" %>    </td>
+                <td class="thick-line text-right"><%="#{number_to_currency current_cart.subtotal}" %>    </td>
               </tr>
               <tr>
                 <td class="no-line"></td>
                 <td class="no-line"></td>
                 <td class="no-line text-left">Shipping</td>
-                <td class="no-line text-right"><%="#{number_to_currency current_order.shipping }" %></td>
+                <td class="no-line text-right"><%="#{number_to_currency current_cart.shipping }" %></td>
               </tr>
                 <tr>
                   <td class="no-line"></td>
                   <td class="no-line"></td>
                   <td class="no-line text-left">Tax</td>
-                  <td class="no-line text-right"><%="#{number_to_currency current_order.tax }" %></td>
+                  <td class="no-line text-right"><%="#{number_to_currency current_cart.tax }" %></td>
                 </tr>
               <tr>
                 <td class="no-line"></td>
                 <td class="no-line"></td>
                 <td class="no-line text-left"><strong>Total</strong></td>
-                <td class="no-line text-right"><%="#{number_to_currency current_order.total }" %></td>
+                <td class="no-line text-right"><%="#{number_to_currency current_cart.total }" %></td>
               </tr>
               </tbody>
             </table>
@@ -381,7 +381,7 @@
       <script
         src="https://checkout.stripe.com/checkout.js" class="stripe-button"
         data-key="pk_test_AWVRdlM1LHBiV2UOyLT0bFyA"
-        data-amount="<%= current_order.total * 100 %>"
+        data-amount="<%= current_cart.total * 100 %>"
         data-name="Australianproducts"
         data-description="2 widgets"
         data-image="http://res.cloudinary.com/sebastiaanpoppen/image/upload/v1479297450/flag-round-250_uodave.png"
