cart model and session working

--- a/app/views/carts/_shopping_cart.html.erb
+++ b/app/views/carts/_shopping_cart.html.erb
@@ -4,7 +4,7 @@
 
 <div>
   <div class="confirmbutton">
-    <form action="charges/new.html">
+    <form action="/charges/new.html">
       <input class="btn btn-default", id=confirmbutton, type="submit" value="Confirm and pay your order"/>
     </form>
   </div>
