--- a/app/views/order_items/create.js.erb
+++ b/app/views/order_items/create.js.erb
@@ -1,5 +1,7 @@
-<% if @order.errors.any? || @order_item.errors.any? %>
-  alert("not valid.")
+<% if @cart.errors.any? || @order_item.errors.any? %>
+console.log(1)
+console.error(message)
+  alert("not valide.");
 <% else %>
   $(".cart-text").html("<%= escape_javascript(render 'layouts/cart_text') %>");
 <% end %>
