--- a/app/views/products/_product_row.html.erb
+++ b/app/views/products/_product_row.html.erb
@@ -12,6 +12,10 @@
           <th class="text-left">
               <strong>Add to cart:</strong>
           </th>
+          <th class="text-left">
+              <strong>Add to wishlist:</strong>
+          </th>
+
         </tr>
     </thead>
     <tbody>
@@ -29,8 +33,11 @@
           <td><%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %></td>
             <%= f.hidden_field :product_id, value: product.id %>
           <td><%= f.submit "Add to Cart", class: "btn btn-primary" %></td>
-      </tr>
+          <td>
 
+
+      </tr>
+  
         <% end %>
         <% end %>
         <% end %>
