--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -37,3 +37,8 @@
         <% end %>
     </tbody>
 </table>
+
+<div class="inline-btn">
+    <div class="back-button">
+        <%= link_to "Back", root_path, class: "btn btn-default" %>
+    </div>
