--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,9 +9,14 @@
       </button>
       <%= link_to "Australian Food & Beverages", root_path, class: "navbar-brand" %>
 
+
+
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
+
+        <li class="active"><a href="/favorite_products">Wishlist <span class="sr-only">(current)</span></a></li>
+
 
         <% if !user_signed_in? %>
           <li><%= link_to "Log In", new_user_session_path %></li>
