--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,6 +5,7 @@ img  {
 .table-bordered {
   width: 700px;
   align-items: center;
+
 }
 
 .searchbar {
@@ -42,4 +43,12 @@ img  {
 
 .shippingform {
   margin: 0px 0 0 450px;
+}
+
+#wishlist {
+  margin: 0px 0 0 250px;
+}
+
+#ordershow {
+  margin: 0px 0 0 250px;
 }
