--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
 
-<table class="table table-bordered table-striped">
+<table class="table table-bordered table-striped", id="ordershow">
   <thead>
       <tr>
           <th class="text-left"><%= "name" %></th>
