--- a/app/views/carts/_cart_row.html.erb
+++ b/app/views/carts/_cart_row.html.erb
@@ -1,7 +1,7 @@
 
 <br>
 
-  <table class="table table-bordered table-striped">
+  <table class="table table-bordered table-striped", id="carttable">
     <thead>
         <tr>
             <th class="text-left"><%= "name" %></th>
