--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,11 +1,94 @@
+// General page settings
+
+html, body
+{
+	height: 100%;
+}
+
+body
+{
+	margin: 0px;
+	padding: 0px;
+	background: white;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 11pt;
+	font-weight: 200;
+	color: #656565;
+}
+
+h1, h2, h3
+{
+	margin: 0;
+	padding: 0;
+	font-weight: 500;
+	color: #2B3F48;
+}
+
+p, ol, ul
+{
+	margin-top: 0;
+}
+
+ol, ul
+{
+	padding: 0;
+	list-style: none;
+}
+
+ul.actions
+{
+	text-align: center;
+}
+
+	ul.actions li
+	{
+	}
+
+p
+{
+	line-height: 180%;
+}
+
+strong
+{
+}
+
+a
+{
+	color: #0000FF;
+  color: inherit
+}
+
+
+a:hover
+{
+	text-decoration: none;
+}
+
+.container
+{
+	overflow: hidden;
+	margin: 0em auto;
+	width: 1000px;
+}
+
+
 img  {
   width: 200px;
 }
 
-.table .table-bordered .table-striped {
-  width: 700px;
-  align-items: center;
+// tables
 
+
+#homepagetable {
+  width:700px;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+#carttable {
+  width:600px;
+  margin-left: 100px;
 }
 
 .searchbar {
@@ -55,34 +138,70 @@ img  {
   width: 700px;
 }
 
-// .panel-heading {
-//   width: 650px;
-//   align-items: center;
-// }
-//
-// .panel-primary {
-//   width: 650px;
-//   align-items: center;
-//   margin: 0px 0 0 350px;
-// }
-//
-// .panel-body {
-//   width: 700px;
-//   align-items: center;
-// }
-//
-//
-// .profilepage {
-//   width: 700px;
-//   align-items: center;
-// }
-//
-// .form-group {
-//   width: 700px;
-//   align-items: center;
-// }
-//
-// .actions {
-//   width: 700px;
-//   align-items: center;
-// }
+
+// Styling for navbar
+
+.navbar-default {
+  background-color: #FFF;
+  border-color: #FFF;
+  margin-bottom: 0px;
+
+
+ .navbar-brand {
+   color: #79C255;
+   font-family: Helvetica, sans-serif;
+   letter-spacing: 2px;
+   font-weight: 700;
+   text-decoration: none;
+   text-transform: uppercase;
+   color: #79C255;
+   margin: 0;
+   position: relative;
+   top: 1em;
+   left: 4em;
+}
+
+
+.wishlist {
+  border: 2px solid #79C255;
+  background: #79C255;
+  border-radius: 6px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 11pt;
+  color: #656565;
+  top: 1em;
+  right: 3em;
+  height: 50px;
+  width: 100px;
+  text-align: center;
+  
+}
+
+#navitemsright .wishlist a {
+  color: white;
+}
+
+#dropdown {
+    background-color: #fff;
+    color:#ffffff;
+    top: 1em;
+    right: 3em
+  }
+
+#navitemsright .nav .navbar-nav .navbar-right {
+  right: 5em
+}
+}
+
+// Buttons
+
+.btn-primary {
+    border: 2px solid #79C255;
+    background: #79C255;
+    border-radius: 6px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 11pt;
+    color: white;
+    top: 1em;
+    right: 3em
+}
