--- a/app/views/products/_product_row.html.erb
+++ b/app/views/products/_product_row.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-striped">
+<table class="table table-bordered table-striped", id="homepagetable">
   <thead>
       <tr>
           <th class="text-left"><%= sort_link "name" %></th>
@@ -15,8 +15,6 @@
           <!-- <th class="text-left">
               <strong>Add to wishlist:</strong>
           </th> -->
-
-
         </tr>
     </thead>
     <tbody>
@@ -35,7 +33,7 @@
             <%= f.hidden_field :product_id, value: product.id %>
           <td><%= f.submit "Add to Cart", class: "btn btn-primary" %></td>
 
-        
+
 
   </td>
       </tr>
