--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,47 +1,34 @@
-<nav class="navbar navbar-default navbar-static-top">
-  <div class="container">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
       </button>
-      <%= link_to "Australian Food & Beverages", root_path, class: "navbar-brand" %>
-
-
-
+      <a class="navbar-brand" href="/products">Australian Food & Beverages</a>
     </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
-
-        <li class="active"><a href="/favorite_products">Wishlist <span class="sr-only">(current)</span></a></li>
-
-
-        <% if !user_signed_in? %>
-          <li><%= link_to "Log In", new_user_session_path %></li>
-          <li><%= link_to "Sign Up", new_user_registration_path %></li>
-        <% else %>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle navbar-brand" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            <%= current_user.has_profile? ? current_user.full_name : current_user.email  %> <span class="caret"></span></a>
-
+    <!-- Collect the nav links, forms, and other content for toggling -->
+      <ul class="nav navbar-nav navbar-right", id="navitemsright">
+        <li class="wishlist"><a href="/favorite_products">Wishlist</a></li>
+				<% if !user_signed_in? %>
+					<li><%= link_to "Log In", new_user_session_path %></li>
+					<li><%= link_to "Sign Up", new_user_registration_path %></li>
+				<% else %>
+        <li class="dropdown", id="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.has_profile? ? current_user.full_name : current_user.email  %> <span class="caret"></span></a>
           <ul class="dropdown-menu">
-
             <% if current_user.has_profile? %>
-              <li><%= link_to "Edit Profile", edit_profile_path(current_user.profile) %></li>
-            <% else %>
-              <li><%= link_to "Create Profile", new_profile_path %></li>
-            <% end %>
-            <li><%= link_to "Edit Password", edit_user_registration_path %></li>
-
-            <li role="separator" class="divider"></li>
-            <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+							<li><%= link_to "Edit Profile", edit_profile_path(current_user.profile) %></li>
+						<% else %>
+							<li><%= link_to "Create Profile", new_profile_path %></li>
+						<% end %>
+						<li><%= link_to "Edit Password", edit_user_registration_path %></li>
+						<li role="separator" class="divider"></li>
+						<li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+						<% end %>
           </ul>
-
         </li>
-        <% end %>
       </ul>
-    </div><!--/.nav-collapse -->
-  </div>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
