--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,72 +1,58 @@
 // General page settings
 
-html, body
-{
+html, body {
 	height: 100%;
 }
 
-body
-{
-	margin: 0px;
+body {
 	padding: 0px;
 	background: white;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 11pt;
 	font-weight: 200;
 	color: #656565;
+  height: 0;
+  padding-bottom: 56.25%; /* 16:9 */
+  position: relative;
 }
 
-h1, h2, h3
-{
+h1, h2, h3 {
 	margin: 0;
 	padding: 0;
 	font-weight: 500;
 	color: #2B3F48;
 }
 
-p, ol, ul
-{
+p, ol, ul {
 	margin-top: 0;
 }
 
-ol, ul
-{
+ol, ul {
 	padding: 0;
 	list-style: none;
 }
 
-ul.actions
-{
+ul.actions {
 	text-align: center;
 }
 
-	ul.actions li
-	{
-	}
 
-p
-{
+p {
 	line-height: 180%;
 }
 
-strong
-{
-}
 
-a
-{
+a {
 	color: #0000FF;
   color: inherit
 }
 
 
-a:hover
-{
+a:hover {
 	text-decoration: none;
 }
 
-.container
-{
+.container {
 	overflow: hidden;
 	margin: 0em auto;
 	width: 1000px;
@@ -77,18 +63,38 @@ img  {
   width: 200px;
 }
 
-// tables
+// homepage
 
-
-#homepagetable {
-  width:700px;
-  margin-left:auto;
-  margin-right:auto;
+.jumbotron {
+  margin-bottom: 0px;
+  background-position: 0% 25%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #79C255;
+	position: relative;
 }
 
-#carttable {
-  width:600px;
-  margin-left: 100px;
+.page-title {
+  font-size: 100px;
+	text-align: center;
+	position: relative;
+}
+
+.paragraph-intro {
+  letter-spacing: 10px;
+	text-align: center;
+}
+
+.homepageheader {
+	position: relative;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+}
+
+#homepagetable {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
 }
 
 .searchbar {
@@ -99,55 +105,94 @@ img  {
   text-align: center;
 }
 
+.searchbar {
+	position: relative;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+}
+
+// Cartpage
+
+.shopping-cart   {
+  position: relative;
+  top: 0; left: 0;
+  width: 50%; height: 50%;
+	margin: auto;
+}
+
 .cartbutton {
   text-align: center;
   color: black;
   font-size: 20px;
+  position: relative;
 }
 
 .confirmbutton {
   text-align: center;
+	position: relative;
 }
 
-.orderitemrow {                                                                                                                                                         ;
-  width: 300px;
-  height: 200px;
-  z-index: 15;
-  margin: 0px 0 0 250px;
+#ordershow {
+  margin: auto;
+  width: 700px;
 }
 
-.productoverview {
-  margin: 0px 0 0 450px;
-}
+
+// confirmationpage
 
 .paybutton {
   margin: 0px 0 0 600px;
+
+}
+
+.stripe-button {
+		width: 300px;
+		height: 40px;
 }
 
 .shippingform {
   margin: 0px 0 0 450px;
 }
 
-#wishlist {
-  margin: 0px 0 0 250px;
-  width: 700px;
+
+.text-center {
+	position: relative;
 }
 
-#ordershow {
-  margin: 0px 0 0 250px;
-  width: 700px;
+.confirmpagetitle {
+  position: relative;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+	text-align: center;
 }
+
+.col-md-6 {
+	position: relative;
+  top: 0; left: 0;
+  width: 50%; height: 100%;
+	margin-left: 350px;
+}
+
+
 
 
 // Styling for navbar
+
+#wishlist {
+  margin: 0px 0 0 250px;
+  width: 700px;
+	position: relative;
+}
 
 .navbar-default {
   background-color: #FFF;
   border-color: #FFF;
   margin-bottom: 0px;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  position: absolute;
 
-
- .navbar-brand {
+.navbar-brand {
    color: #79C255;
    font-family: Helvetica, sans-serif;
    letter-spacing: 2px;
@@ -157,8 +202,8 @@ img  {
    color: #79C255;
    margin: 0;
    position: relative;
-   top: 1em;
-   left: 4em;
+	 top: 1.8rem;
+	 left: 1.6rem
 }
 
 
@@ -174,7 +219,8 @@ img  {
   height: 50px;
   width: 100px;
   text-align: center;
-  
+  padding-top: -5px;
+  padding-bottom: -5px
 }
 
 #navitemsright .wishlist a {
@@ -193,6 +239,20 @@ img  {
 }
 }
 
+.cartnavbar {
+    background: none;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 11pt;
+    color: #656565;
+    top: 1em;
+    right: 3em;
+    height: 50px;
+    width: 100px;
+    text-align: center;
+    padding-top: -5px;
+    padding-bottom: -5px
+}
+
 // Buttons
 
 .btn-primary {
@@ -204,4 +264,11 @@ img  {
     color: white;
     top: 1em;
     right: 3em
+}
+
+
+#ordershow {
+		position: relative;
+	  top: 0; left: 0;
+	  width: 100%; height: 100%;
 }
