--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <div class="background-opacity">
     <%= render 'shared/navbar' %>
     <br>
     <br>
@@ -31,6 +32,6 @@
     });
   </script>
 
-
+  </div>
 </body>
 </html>
