--- a/app/views/products/_product_row.html.erb
+++ b/app/views/products/_product_row.html.erb
@@ -1,44 +1,23 @@
-<table class="table table-bordered table-striped", id="homepagetable">
-  <thead>
-      <tr>
-          <th class="text-left"><%= sort_link "name" %></th>
-          <th class="text-left"><%= "price" %></th>
-          <th class="text-left">
-              <strong>photo:</strong>
-          </th>
-          <th class="text-left">
-              <strong>Quantity:</strong>
-          </th>
-          <th class="text-left">
-              <strong>Add to cart:</strong>
-          </th>
-          <!-- <th class="text-left">
-              <strong>Add to wishlist:</strong>
-          </th> -->
-        </tr>
-    </thead>
-    <tbody>
-      <% @products.each do |product| %>
-      <tr>
-          <td><%= link_to product.name, product_path(product.id) %>
-          </td>
-          <td>
-              <%= product.price %>
-          </td>
-          <% product.photos.each do |photo| %>
-          <td><%= image_tag photo.image %>
-          </td>
-            <%= form_for order_item, remote: true do |f| %>
-          <td><%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %></td>
-            <%= f.hidden_field :product_id, value: product.id %>
-          <td><%= f.submit "Add to Cart", class: "btn btn-primary" %></td>
-
-
-
-  </td>
-      </tr>
-        <% end %>
-        <% end %>
-        <% end %>
-    </tbody>
-</table>
+<ul class="flex-container">
+  <% @products.each do |product| %>
+  <li class="flex-item">
+    <div class="flexphoto"><% product.photos.each do |photo| %>
+    <%= image_tag photo.image %> </div>
+    <div class=flexinfo>
+      <h1 class="flextitle"><%= link_to product.name, product_path(product.id) %></h1>
+      <br>
+      <p class="flexprice"> <%= "price #{product.price} "%><p>
+      <div class="flexquantity">
+        <%= form_for order_item, remote: true do |f| %>
+        <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
+      </div>
+      <div class="flexcart">
+      <%= f.hidden_field :product_id, value: product.id %>
+      <%= f.submit "Add to Cart", class: "btn btn-primary" %>
+      </div>
+    </div>
+    <% end %>
+    <% end %>
+    <% end %>
+  </li>
+</ul>
