--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -290,6 +290,7 @@ img  {
 		position: relative;
 	  top: 0; left: 0;
 	  width: 100%; height: 100%;
+		border-radius: 15px;
 }
 
 
@@ -311,7 +312,6 @@ img  {
 	display: flex;
   color: black;
   font-size: 1em;
-	position: relative;
 	flex-grow: 1;
 	border-radius: 6px;
 	box-shadow: 10px 10px 5px rgba(0,0,0,0.4);
@@ -325,17 +325,14 @@ img  {
 	height: 100%;
 	width: 40%;
 	margin-left: 25px;
-
-	img {
-		  max-width: 200px;
-			max-height: 200px
-	}
 }
 
 .flexinfo {
 	height: 100%;
 	width: 60%;
-	margin-left: 125px;
+	margin-left: 60px;
+	align-items: center;
+	vertical-align: middle;
 }
 
 .flextitle {
@@ -345,9 +342,7 @@ img  {
 
 .flexprice {
 	font-size: 20px;
-
 }
-
 
 .flexquantity {
 	display: inline-block;
