--- a/app/views/carts/_cart_row.html.erb
+++ b/app/views/carts/_cart_row.html.erb
@@ -8,7 +8,7 @@
             <th class="text-left"><strong>Delete:</strong></th>
           </tr>
       </thead>
-      <tbody>
+      <tbody id="carttable">
       <% @order_items.each do |order_item| %>
         <tr>
             <td><%= order_item.product.name %></td>
