--- a/app/views/carts/_cart_row.html.erb
+++ b/app/views/carts/_cart_row.html.erb
@@ -1,5 +1,6 @@
   <table class="table table-bordered table-striped", id="carttable">
     <thead>
+      <th> Bookings untill today </th>
         <tr>
             <th class="text-left"><%= "name" %></th>
             <th class="text-left"><%= "price" %></th>
