--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>Australianstore</title>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= tag :meta, :name => "stripe-key", :content => ENV["pk_test_AWVRdlM1LHBiV2UOyLT0bFyA"] %>
+    <meta property="og:image" content="http://res.cloudinary.com/sebastiaanpoppen/image/upload/v1480598385/Screen_Shot_2016-12-01_at_14.19.00_wphj72.png" />
     <%= csrf_meta_tags %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= stylesheet_link_tag 'application', "https://fonts.googleapis.com/css?family=Montserrat:400,700", :media => "all" %>
