--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,15 @@
 <html>
   <head>
     <title>Australianstore</title>
+    <!-- OG Metadata for Linkedin  -->
+    <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Australian Shop" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Australian Food and beverages"/>
+    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="ttps://res.cloudinary.com/sebastiaanpoppen/image/upload/c_scale,w_253/v1480598385/Screen_Shot_2016-12-01_at_14.19.00_wphj72.png" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://australianfoodstore.herokuapp.com/" />
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= tag :meta, :name => "stripe-key", :content => ENV["pk_test_AWVRdlM1LHBiV2UOyLT0bFyA"] %>
-    <meta property="og:image" content="http://res.cloudinary.com/sebastiaanpoppen/image/upload/v1480598385/Screen_Shot_2016-12-01_at_14.19.00_wphj72.png" />
+
     <%= csrf_meta_tags %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= stylesheet_link_tag 'application', "https://fonts.googleapis.com/css?family=Montserrat:400,700", :media => "all" %>
