--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og: http://ogp.me/ns#">
   <head>
     <title>Australianstore</title>
     <!-- OG Metadata for Linkedin  -->
-    <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Australian Shop" />
-    <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Australian Food and beverages"/>
-    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="ttps://res.cloudinary.com/sebastiaanpoppen/image/upload/c_scale,w_253/v1480598385/Screen_Shot_2016-12-01_at_14.19.00_wphj72.png" />
-    <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://australianfoodstore.herokuapp.com/" />
+    <meta property="og:title" content="Australian Shop" />
+    <meta property="og:description" content="Australian Food and beverages"/>
+    <meta property="og:image" content="https://res.cloudinary.com/sebastiaanpoppen/image/upload/c_scale,w_253/v1480598385/Screen_Shot_2016-12-01_at_14.19.00_wphj72.png" />
+    <meta property="og:url" content="https://australianfoodstore.herokuapp.com/" />
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= tag :meta, :name => "stripe-key", :content => ENV["pk_test_AWVRdlM1LHBiV2UOyLT0bFyA"] %>
