--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
     <!-- OG Metadata for Linkedin  -->
     <meta property="og:title" content="Australian Shop" />
     <meta property="og:description" content="Australian Food and beverages"/>
-    <meta property="og:image" content="https://res.cloudinary.com/sebastiaanpoppen/image/upload/c_scale,w_253/v1480598385/Screen_Shot_2016-12-01_at_14.19.00_wphj72.png" />
-    <meta property="og:url" content="https://australianfoodstore.herokuapp.com/" />
+    <meta property="og:image" content="http://res.cloudinary.com/sebastiaanpoppen/image/upload/c_scale,w_319/v1480598385/Screen_Shot_2016-12-01_at_14.19.00_wphj72.png" />
+    <meta property="og:url" content="http://australianfoodstore.herokuapp.com/" />
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= tag :meta, :name => "stripe-key", :content => ENV["pk_test_AWVRdlM1LHBiV2UOyLT0bFyA"] %>
